<resources>
    <string name="app_name">Mapping</string>

    <string name="logo">LOGO</string>

    <string name="ID_text">ID</string>

    <string name="Feed_text">Feed</string>

    <string name="Map_text">Map</string>

    <string name="Title_text">Title</string>

    <string name="Addbar_text">+</string>

    <string name="Subtractbar_text">⁃</string>

    <string name="editText">제목을 입력하세요</string>
</resources>