<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gachon.mapping.TitleActivity"
    android:background="#086A87">

    <Button
        android:id="@+id/Map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/Image"
        android:text="@string/Map_text"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:background="@drawable/solid_button"/>

    <Button
        android:id="@+id/Image"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:text="Image"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:background="@drawable/solid_button"/>

    <Button
        android:id="@+id/ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Image"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="-2dp"
        android:text="@string/ID_text"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:background="@drawable/solid_button"/>

    <Button
        android:id="@+id/Feed"
        android:layout_width="78dp"
        android:layout_height="36dp"
        android:layout_below="@+id/Image"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@+id/ID"
        android:text="@string/Feed_text"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:background="@drawable/solid_button"/>

    <Button
        android:id="@+id/Addbar"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ID"
        android:layout_centerInParent="true"
        android:layout_marginTop="13dp"
        android:background="@drawable/solid_button"
        android:text="@string/Addbar_text"
        android:textColor="@color/black"
        android:textStyle="italic" />

    <Button
        android:id="@+id/Title1"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Addbar"
        android:layout_centerInParent="true"
        android:layout_marginTop="13dp"
        android:background="@drawable/solid_button"
        android:text="@string/Title_text"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:visibility="invisible" />

    <Button
        android:id="@+id/Title2"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Title1"
        android:layout_centerInParent="true"
        android:layout_marginTop="13dp"
        android:text="@string/Title_text"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:background="@drawable/solid_button"
        android:visibility="invisible" />
    <Button
        android:id="@+id/Title3"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Title2"
        android:layout_centerInParent="true"
        android:layout_marginTop="13dp"
        android:text="@string/Title_text"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:background="@drawable/solid_button"
        android:visibility="invisible" />
    <Button
        android:id="@+id/Title4"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Title3"
        android:layout_centerInParent="true"
        android:layout_marginTop="13dp"
        android:text="@string/Title_text"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:background="@drawable/solid_button"
        android:visibility="invisible" />
    <Button
        android:id="@+id/Title5"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Title4"
        android:layout_centerInParent="true"
        android:layout_marginTop="13dp"
        android:text="@string/Title_text"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:background="@drawable/solid_button"
        android:visibility="invisible" />
    <Button
        android:id="@+id/Title6"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Title5"
        android:layout_centerInParent="true"
        android:layout_marginTop="13dp"
        android:text="@string/Title_text"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:background="@drawable/solid_button"
        android:visibility="invisible" />

</RelativeLayout>